login UI complete

--- a/ticket-frontend/src/app/login/login.component.css
+++ b/ticket-frontend/src/app/login/login.component.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import "~bootstrap-icons/font/bootstrap-icons.css";
 
 
 .home-image{
@@ -29,6 +30,7 @@ nav{
 
 img{
     text-align: center;
+    margin-left: 5%;
 }
 
 .nav-item{
