--- a/ticket-frontend/src/app/login/login.component.html
+++ b/ticket-frontend/src/app/login/login.component.html
@@ -1,30 +1,38 @@
 <nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="#">
-      <img src="/assets/images/logo.png" alt="" width="30" style="display: inline;" height="30">
-      Ticket
-    </a>
-  </nav>
+  <a class="navbar-brand" href="#">
+    <img src="/assets/images/logo.png" alt="" width="30" style="display: inline;" height="30">
+    Ticket
+  </a>
+</nav>
 
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-sm">
-            <img class="home-image img-fluid" src="/assets/images/login.png">
-        </div>
-        <div class="col">
-            <div class="input-group input-group-sm mb-3">
-                
-                <h3 class="home-title" style="text-align: center ;">Login</h3>
-
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text"  id="inputGroup-sizing-default">Mobile number</span>
-                    </div>
-                    <input type="number" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
-                  </div>
-                
-            </div>
-
-        </div>
-
+  <div class="row">
+    <div class="col-sm">
+      <img class="home-image img-fluid" src="/assets/images/login.png">
     </div>
+    <div class="col">
+      &nbsp;
+      <h3 class="home-title" style="text-align: center ;">Login</h3>
+
+      <p>
+        Enter you're phone number to access you're account. If you're a new user that's ok, we'll create a new account
+        for you.
+      </p>
+
+      <div class="input-group input-group-sm mb-3">
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="basic-addon1">
+              <i class="bi bi-phone-fill text-primary"></i>
+            </span>
+          </div>
+          <input type="number" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
+        </div>
+      </div>
+      <div class="text-center">
+        <button type="button" class="btn btn-primary">Login</button>
+      </div>
+    </div>
+
+  </div>
 </div>
