--- a/ticket-frontend/src/app/header/header.component.html
+++ b/ticket-frontend/src/app/header/header.component.html
@@ -1,22 +1,3 @@
-<!-- <nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="#">
-        <img class="logo" src="/assets/images/logo.png" alt="" width="30" style="display: inline;" height="30">
-        Ticket
-    </a>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" >Home</a>
-          </li>
-        </ul>
-        
-    </div>
-    
-
-    <button type="submit" class="btn btn-danger">Logout</button>
-</nav> -->
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
 
@@ -38,10 +19,16 @@
             >Admin Dashboard</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/user" *ngIf="roleMatch(['User'])"
-            
-            >User Dashboard</a>
+            <a class="nav-link active" aria-current="page" routerLink="/user" *ngIf="roleMatch(['User'])">
+              User Dashboard</a>
           </li>
+
+          <li class="nav-item">
+
+            
+
+          </li>
+
          
         </ul>
         <button *ngIf="isLoggedIn()" type="button" class="btn btn-danger" (click)="logout()" >Logout</button>
