TIC-2 completed forbidden page

--- a/ticket-frontend/src/app/forbidden/forbidden.component.html
+++ b/ticket-frontend/src/app/forbidden/forbidden.component.html
@@ -1,1 +1,3 @@
-<p>forbidden works!</p>
+<h1>Access denied !</h1>
+<lottie-player class="centered" src="https://assets10.lottiefiles.com/private_files/lf30_ulp9xiqw.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
+
