--- a/ticket-frontend/src/app/header/header.component.html
+++ b/ticket-frontend/src/app/header/header.component.html
@@ -12,14 +12,14 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
+            <a class="nav-link"  routerLinkActive="active" aria-current="page" routerLink="/home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/admin" *ngIf="roleMatch(['Admin'])"
+            <a class="nav-link" routerLinkActive="active" aria-current="page" routerLink="/admin" *ngIf="roleMatch(['Admin'])"
             >Admin Dashboard</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/user" *ngIf="roleMatch(['User'])">
+            <a class="nav-link" routerLinkActive="active" aria-current="page" routerLink="/user" *ngIf="roleMatch(['User'])">
               User Dashboard</a>
           </li>
 
