UI changes and user details added

--- a/ticket-frontend/src/app/admin/admin.component.html
+++ b/ticket-frontend/src/app/admin/admin.component.html
@@ -1,2 +1,6 @@
-<p>admin works!</p>
-<p>{{message}}</p>
+<div class="user-count">
+    <mat-chip-list>
+        <mat-chip fontSet="material-icons-round" data-toggle="tooltip" data-placement="bottom" title="Total users"><mat-icon>supervised_user_circle</mat-icon> {{count}}</mat-chip>
+      </mat-chip-list>
+</div>
+
