--- a/ticket-frontend/src/styles.css
+++ b/ticket-frontend/src/styles.css
@@ -2,5 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 html, body { height: 100%; }
-body { margin: 0;     font-family: 'Montserrat', sans-serif;
+body { margin: 0;}
+mat-icon{
+    vertical-align: middle;
+  }
+*{
+  font-family: 'Montserrat', sans-serif;
 }
