register UI added

--- a/ticket-frontend/src/app/admin/admin.component.html
+++ b/ticket-frontend/src/app/admin/admin.component.html
@@ -3,4 +3,7 @@
         <mat-chip fontSet="material-icons-round" data-toggle="tooltip" data-placement="bottom" title="Total users"><mat-icon>supervised_user_circle</mat-icon> {{count}}</mat-chip>
       </mat-chip-list>
 </div>
+<div>
+  <app-register></app-register>
+</div>
 
